--- a/src/main/resources/fxmls/kiosk.fxml
+++ b/src/main/resources/fxmls/kiosk.fxml
@@ -16,7 +16,7 @@
             xmlns="http://javafx.com/javafx/11.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.msos.KioskController" fx:id="rootBorderPane"
-            >
+>
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
@@ -51,13 +51,15 @@
         <ListView fx:id="selectedSeatsListView" maxHeight="1.7976931348623157E308"
                   prefHeight="200.0"
                   prefWidth="180.0" BorderPane.alignment="CENTER"
-                  />
+        />
     </right>
     <bottom>
         <ButtonBar fx:id="bottomButtonBar" prefHeight="40.0" BorderPane.alignment="CENTER"
-                   >
+        >
             <buttons>
-                <Button mnemonicParsing="false" text="Buy tickets"/>
+                <Button mnemonicParsing="false" text="Buy tickets"
+                        fx:id="buyTicketsButton" onAction="#openTicketsMenu"
+                />
             </buttons>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
