--- a/src/main/resources/fxmls/ticket_menu.fxml
+++ b/src/main/resources/fxmls/ticket_menu.fxml
@@ -1,26 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
-      prefHeight="600.0" prefWidth="400.0"
-      spacing="10.0"
-      fx:controller="com.msos.ticket_menu.TicketMenuController"
->
+<VBox prefHeight="600.0" prefWidth="400.0" spacing="4.0"
+      xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.msos.ticket_menu.TicketMenuController">
     <children>
-        <ListView fx:id="ticketListView" focusTraversable="false"
-                  prefHeight="200.0"
-                  VBox.vgrow="SOMETIMES"
-        />
-        <ButtonBar prefHeight="40.0">
-            <buttons>
-                <Button mnemonicParsing="false" text="BUY"/>
-            </buttons>
-        </ButtonBar>
+        <ListView fx:id="ticketListView" focusTraversable="false" prefHeight="200.0"
+                  VBox.vgrow="SOMETIMES">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+        </ListView>
+        <Separator prefWidth="200.0"/>
+        <GridPane hgap="4.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES"/>
+                <ColumnConstraints hgrow="SOMETIMES"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Label alignment="TOP_LEFT" text="To pay:" textOverrun="CLIP">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Label>
+                <Label alignment="TOP_LEFT" text="33.69" textFill="GREEN" GridPane.columnIndex="1"
+                       fx:id="toPayValue">
+                    <font>
+                        <Font name="System Bold" size="20.0"/>
+                    </font>
+                </Label>
+                <Label text="PLN" GridPane.columnIndex="2">
+                    <font>
+                        <Font name="System Bold" size="18.0"/>
+                    </font>
+                </Label>
+                <ButtonBar prefHeight="40.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
+                    <buttons>
+                        <Button cancelButton="true" mnemonicParsing="false" text="Back"
+                                onAction="#cancel"/>
+                        <Button defaultButton="true" mnemonicParsing="false" text="BUY"
+                                onAction="#finalizeTransaction"/>
+                    </buttons>
+                </ButtonBar>
+            </children>
+            <VBox.margin>
+                <Insets/>
+            </VBox.margin>
+            <padding>
+                <Insets bottom="4.0" left="4.0" right="4.0" top="4.0"/>
+            </padding>
+        </GridPane>
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
