--- a/src/main/resources/fxmls/kiosk.fxml
+++ b/src/main/resources/fxmls/kiosk.fxml
@@ -9,25 +9,24 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="Infinity"
-            minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="680.0"
-            xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.msos.KioskController" fx:id="rootBorderPane"
->
+<BorderPane fx:id="rootBorderPane" maxHeight="-Infinity" maxWidth="Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="680.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.msos.KioskController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close"/>
+                        <MenuItem mnemonicParsing="false" text="Open..." onAction="#open"/>
+                        <MenuItem mnemonicParsing="false" text="Save" onAction="#save"/>
+                        <MenuItem mnemonicParsing="false" text="Save as..." onAction="#saveAs"/>
+                        <MenuItem mnemonicParsing="false" text="Close" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                        <MenuItem mnemonicParsing="false" text="New Room"/>
+                        <MenuItem mnemonicParsing="false" text="Edit Room"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
@@ -40,8 +39,8 @@
     </top>
     <left>
         <ListView fx:id="roomsListView" maxHeight="1.7976931348623157E308" prefHeight="200.0"
-                  prefWidth="180.0" BorderPane.alignment="CENTER"
-                  stylesheets="/styles/no-focus-border.css"/>
+                  prefWidth="180.0" stylesheets="/styles/no-focus-border.css"
+                  BorderPane.alignment="CENTER"/>
     </left>
     <center>
 
@@ -49,17 +48,13 @@
     </center>
     <right>
         <ListView fx:id="selectedSeatsListView" maxHeight="1.7976931348623157E308"
-                  prefHeight="200.0"
-                  prefWidth="180.0" BorderPane.alignment="CENTER"
-        />
+                  prefHeight="200.0" prefWidth="180.0" BorderPane.alignment="CENTER"/>
     </right>
     <bottom>
-        <ButtonBar fx:id="bottomButtonBar" prefHeight="40.0" BorderPane.alignment="CENTER"
-        >
+        <ButtonBar prefHeight="40.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" text="Buy tickets"
-                        fx:id="buyTicketsButton" onAction="#openTicketsMenu"
-                />
+                <Button fx:id="buyTicketsButton" mnemonicParsing="false" onAction="#openTicketsMenu"
+                        text="Buy tickets"/>
             </buttons>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
