--- a/src/main/resources/styles/seat-button.css
+++ b/src/main/resources/styles/seat-button.css
@@ -1,4 +1,4 @@
-.chair-button {
+.seat-button {
     -fx-background-color: /*-fx-box-border,*/ white;
     -fx-background-insets: 0, 1;
     -fx-background-radius: 0;
@@ -9,10 +9,9 @@
     -fx-pref-height: 32px;
     -fx-pref-width: 32px;
     -fx-graphic: url('/icons/seat_gray_32.png');
-
 }
 
-.chair-button:selected {
+.seat-button:selected {
     -fx-background-color: #d2eed2;
     -fx-border-color: lightgreen;
     -fx-pref-height: 32px;
@@ -20,7 +19,15 @@
     -fx-graphic: url('/icons/seat_green_32.png');
 }
 
-.chair-button:disabled {
+.seat-button:disabled {
+    -fx-background-color: lightpink;
+    -fx-pref-height: 32px;
+    -fx-pref-width: 32px;
+    -fx-border-color: indianred;
+    -fx-graphic: url('/icons/seat_red_32.png');
+}
+
+.seat-button:pseudo-disabled {
     -fx-background-color: lightpink;
     -fx-pref-height: 32px;
     -fx-pref-width: 32px;
