--- a/src/main/resources/fxmls/room-entry.fxml
+++ b/src/main/resources/fxmls/room-entry.fxml
@@ -1,11 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.msos.RoomEntry"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<fx:root type="VBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+       xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <HBox spacing="8.0">
+            <children>
+                <Label text="Room:">
+                    <font>
+                        <Font size="24.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="numberLabel" text="4.">
+                    <font>
+                        <Font name="System" size="24.0"/>
+                    </font>
+                </Label>
+            </children>
+        </HBox>
+        <HBox spacing="6.0">
+            <children>
+                <Label text="Free seats:" visible="false">
+                    <font>
+                        <Font size="16.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="freeSeatsLabel" text="5" visible="false">
+                    <font>
+                        <Font size="16.0"/>
+                    </font>
+                </Label>
+            </children>
+        </HBox>
+    </children>
+    <padding>
+        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+    </padding>
+</fx:root>
