modification requires password now

--- a/src/main/resources/fxmls/password-prompt.fxml
+++ b/src/main/resources/fxmls/password-prompt.fxml
@@ -37,9 +37,9 @@
             <buttons>
                 <Button fx:id="confirmButton" alignment="CENTER" defaultButton="true"
                         mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefWidth="70.0"
-                        text="Confirm"/>
+                        text="Confirm" focusTraversable="false"/>
                 <Button fx:id="cancelButton" cancelButton="true" mnemonicParsing="false"
-                        prefWidth="70.0" text="Cancel" textAlignment="CENTER"/>
+                        prefWidth="70.0" text="Cancel" textAlignment="CENTER" focusTraversable="false"/>
             </buttons>
         </ButtonBar>
     </children>
