--- a/src/main/resources/fxmls/kiosk.fxml
+++ b/src/main/resources/fxmls/kiosk.fxml
@@ -22,7 +22,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" text="New Room"/>
                         <MenuItem mnemonicParsing="false" text="Edit Room"/>
-                        <MenuItem mnemonicParsing="false" text="Edit Seats' States"/>
+                        <MenuItem mnemonicParsing="false" text="Edit Seats' States" onAction="#editSeats"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
