--- a/src/main/resources/fxmls/ticket_entry.fxml
+++ b/src/main/resources/fxmls/ticket_entry.fxml
@@ -1,67 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<fx:root hgap="4.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-         minWidth="-Infinity" prefHeight="100.0" prefWidth="250.0" type="GridPane"
-         xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-        >
+<fx:root hgap="4.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="100.0" type="GridPane" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="NEVER" maxWidth="1.7976931348623157E308" minWidth="10.0"/>
-        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308"
-                           minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Label text="Room 4.">
             <font>
-                <Font size="20.0"/>
+                <Font size="20.0" />
             </font>
         </Label>
-        <ComboBox promptText="&lt;TICKET TYPE&gt;" GridPane.columnSpan="2" GridPane.rowIndex="2"
-            fx:id="ticketOptions"/>
-        <Label fx:id="priceValueLabel" text="25,99" textFill="#009c34" GridPane.columnIndex="1"
-               GridPane.rowIndex="2" GridPane.valignment="TOP">
+        <ComboBox fx:id="ticketOptions" promptText="&lt;TICKET TYPE&gt;" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+        <Label fx:id="priceValueLabel" text="25,99" textFill="#009c34" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP">
             <font>
-                <Font name="System Bold" size="18.0"/>
+                <Font name="System Bold" size="18.0" />
             </font>
         </Label>
-        <Label text="Price:" GridPane.columnIndex="1" GridPane.rowIndex="1"
-               GridPane.valignment="BOTTOM">
+        <Label text="Price:" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
             <font>
-                <Font size="14.0"/>
+                <Font size="14.0" />
             </font>
         </Label>
         <GridPane alignment="CENTER_LEFT" hgap="4.0" GridPane.rowIndex="1">
             <children>
-                <Label text="Row:"/>
-                <Label text="Seat:" GridPane.rowIndex="1"/>
-                <Label text="7." GridPane.columnIndex="1"
-                       fx:id="rowNumberLabel"/>
-                <Label text="12." GridPane.columnIndex="1" GridPane.rowIndex="1"
-                       fx:id="seatNumberLabel"/>
+                <Label text="Row:" />
+                <Label text="Seat:" GridPane.rowIndex="1" />
+                <Label fx:id="rowNumberLabel" text="7." GridPane.columnIndex="1" />
+                <Label fx:id="seatNumberLabel" text="12." GridPane.columnIndex="1" GridPane.rowIndex="1" />
             </children>
             <columnConstraints>
-                <ColumnConstraints/>
-                <ColumnConstraints minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints />
+                <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0"/>
-                <RowConstraints/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" />
+                <RowConstraints />
             </rowConstraints>
         </GridPane>
     </children>
     <padding>
-        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
     </padding>
 </fx:root>
