--- a/src/main/resources/fxmls/password-prompt.fxml
+++ b/src/main/resources/fxmls/password-prompt.fxml
@@ -11,27 +11,18 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
          spacing="8.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1"
-         xmlns:fx="http://javafx.com/fxml/1" stylesheets="/styles/persistent_prompt.css" >
+         xmlns:fx="http://javafx.com/fxml/1" stylesheets="/styles/main-style.css, /styles/persistent_prompt.css" >
     <children>
-        <Label text="This action requires authentication" textFill="RED">
-            <padding>
-                <Insets left="8.0" right="8.0"/>
-            </padding>
-            <font>
-                <Font name="System Bold" size="16.0"/>
-            </font>
+        <Label text="This action requires authentication"
+            style="-fx-padding: 0 8 0 8; -fx-font-family: 'Open Sans Bold'; -fx-font-size: 18; -fx-text-fill: red">
         </Label>
         <TextField fx:id="userField" promptText="User" styleClass="persistent-prompt"/>
         <PasswordField fx:id="passwordField" promptText="Password" styleClass="persistent-prompt"/>
         <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" maxWidth="1.7976931348623157E308"
-               text="Incorrect credentials" textFill="RED" visible="false"
-               fx:id="incorrectInputLabel">
-            <font>
-                <Font size="13.0"/>
-            </font>
-            <padding>
-                <Insets left="8.0" right="8.0"/>
-            </padding>
+               text="Incorrect credentials" visible="false"
+               fx:id="incorrectInputLabel"
+               style="-fx-font-family: 'Open Sans SemiBold';
+                -fx-font-size: 13; -fx-text-fill: red; -fx-padding: 0 8 0 8">
         </Label>
         <ButtonBar>
             <buttons>
