--- a/src/main/resources/fxmls/room_size_picker.fxml
+++ b/src/main/resources/fxmls/room_size_picker.fxml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<fx:root type="VBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      spacing="8.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         spacing="4.0" stylesheets="/styles/main-style.css" type="VBox"
+         xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label text="Pick the room size">
-            <font>
-                <Font size="16.0"/>
-            </font>
-            <padding>
-                <Insets bottom="4.0"/>
-            </padding>
+        <Label text="Pick the room size"
+                style="-fx-font-family: 'Open Sans SemiBold'; -fx-font-size: 16; -fx-padding: 0 6 0 6" >
+
         </Label>
         <GridPane hgap="8.0">
             <columnConstraints>
@@ -34,21 +24,21 @@
             <children>
                 <Label text="Rows:"/>
                 <Label text="Columns:" GridPane.rowIndex="1"/>
-                <TextField prefWidth="64.0" GridPane.columnIndex="1" fx:id="rowsTestField"/>
-                <TextField prefWidth="64.0" GridPane.columnIndex="1" fx:id="columnsTestField"
+                <TextField fx:id="rowsTestField" prefWidth="64.0" GridPane.columnIndex="1"/>
+                <TextField fx:id="columnsTestField" prefWidth="64.0" GridPane.columnIndex="1"
                            GridPane.rowIndex="1"/>
             </children>
         </GridPane>
         <HBox alignment="CENTER" spacing="10.0">
             <children>
-                <Button mnemonicParsing="false" prefWidth="70.0" text="OK" fx:id="okButton"
-                        defaultButton="true"/>
-                <Button mnemonicParsing="false" prefWidth="70.0" text="Cancel" fx:id="cancelButton"
-                        cancelButton="true"/>
+                <Button fx:id="okButton" defaultButton="true" focusTraversable="false"
+                        mnemonicParsing="false" prefWidth="70.0" text="OK"/>
+                <Button fx:id="cancelButton" cancelButton="true" focusTraversable="false"
+                        mnemonicParsing="false" prefWidth="70.0" text="Cancel"/>
             </children>
         </HBox>
     </children>
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="7.0"/>
     </padding>
 </fx:root>
