--- a/src/main/resources/fxmls/ticket_menu.fxml
+++ b/src/main/resources/fxmls/ticket_menu.fxml
@@ -3,64 +3,45 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox maxWidth="460" prefHeight="600.0" prefWidth="400.0" spacing="4.0"
-      xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.msos.ticket_menu.TicketMenuController">
+<VBox maxWidth="460" prefHeight="600.0" prefWidth="400.0" spacing="4.0" stylesheets="/styles/main-style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.msos.ticket_menu.TicketMenuController">
     <children>
-        <ListView fx:id="ticketListView" focusTraversable="false" prefHeight="200.0"
-                  VBox.vgrow="SOMETIMES">
+        <ListView fx:id="ticketListView" focusTraversable="false" prefHeight="200.0" VBox.vgrow="SOMETIMES">
             <VBox.margin>
-                <Insets bottom="10.0"/>
+                <Insets bottom="10.0" />
             </VBox.margin>
         </ListView>
-        <Separator prefWidth="200.0"/>
-        <GridPane hgap="4.0">
+        <Separator prefWidth="200.0" />
+        <GridPane hgap="4.0" vgap="8.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES"/>
-                <ColumnConstraints hgrow="SOMETIMES"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label alignment="TOP_LEFT" text="To pay:" textOverrun="CLIP">
-                    <font>
-                        <Font size="18.0"/>
-                    </font>
+                <Label alignment="TOP_LEFT" style="-fx-font-family: 'Open Sans SemiBold'; -fx-font-size: 18" text="To pay:">
                 </Label>
-                <Label fx:id="toPayValue" alignment="TOP_LEFT" text="33.69" textFill="GREEN"
-                       GridPane.columnIndex="1">
-                    <font>
-                        <Font name="System Bold" size="20.0"/>
-                    </font>
+                <Label fx:id="toPayValue" alignment="TOP_LEFT" style="-fx-font-family: 'Open Sans Bold'; -fx-font-size: 20;                               -fx-text-fill: forestgreen;" text="33.69" GridPane.columnIndex="1">
                 </Label>
-                <Label text="PLN" GridPane.columnIndex="2">
-                    <font>
-                        <Font name="System Bold" size="18.0"/>
-                    </font>
+                <Label style="-fx-font-family: 'Open Sans SemiBold'; -fx-font-size: 18" text="PLN" GridPane.columnIndex="2">
                 </Label>
                 <ButtonBar prefHeight="40.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
                     <buttons>
-                        <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel"
-                                text="Back"/>
-                        <Button defaultButton="true" mnemonicParsing="false"
-                                onAction="#finalizeTransaction" text="BUY"/>
+                        <Button cancelButton="true" focusTraversable="false" mnemonicParsing="false" onAction="#cancel" text="Back" />
+                        <Button defaultButton="true" focusTraversable="false" mnemonicParsing="false" onAction="#finalizeTransaction" text="BUY" />
                     </buttons>
                 </ButtonBar>
             </children>
-            <VBox.margin>
-                <Insets/>
-            </VBox.margin>
             <padding>
-                <Insets bottom="4.0" left="4.0" right="4.0" top="4.0"/>
+                <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
             </padding>
         </GridPane>
     </children>
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
 </VBox>
