--- a/src/main/resources/styles/kiosk.css
+++ b/src/main/resources/styles/kiosk.css
@@ -1,12 +1,14 @@
 .room-list-view{
-    -fx-font-size: 16;
-    -fx-font-smoothing-type: gray;
-}
-
-.room-list-view{
     -fx-border-width: 0 1 0 0;
     -fx-border-color: gray;
     -fx-background-color: #f0f0f0;
+
+    /*-fx-font-size: 16;*/
+    /*-fx-font-smoothing-type: gray;*/
+}
+
+.ticket-list-view{
+    -fx-background-color: whitesmoke;
 }
 
 .ticket-list-box{
